routes sortve work

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,11 @@
 <div>You are on the homepage</div>
+
+{{#if loggedIn}}
+
+<button id="logout" class="btn-no-style">Logout</button>
+
+{{else}}
+<div>you are logged out</div>
+{{/if}}
+
+
