working on handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,9 @@
-<div>You are on the homepage</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h2>Welcome to Social Strength! A new social media network for sharing fitness routines!</h2>
+        </div>
+    </div>
+</div>
 
 
