--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Exercise List</h5>
                     <p class="card-text">Check out our database of exercises.</p>
-                    <a href="#" class="btn btn-primary">Go</a>
+                    <a href="/exercise-list" class="btn btn-primary">Go</a>
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Add a Routine</h5>
                     <p class="card-text">Create your own personal routine.</p>
-                    <a href="#" class="btn btn-primary">Go</a>
+                    <a href="/routinecreate" class="btn btn-primary">Go</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Add an Exercise</h5>
                     <p class="card-text">Want to share an exercise we don't have listed? Do it here.</p>
-                    <a href="#" class="btn btn-primary">Go</a>
+                    <a href="/addexercise" class="btn btn-primary">Go</a>
                 </div>
             </div>
         </div>
