worked more on handlebars

--- a/views/routine.handlebars
+++ b/views/routine.handlebars
@@ -4,11 +4,13 @@
             <h2>{{routine.routine_name}}</h2>
         </div>
         <div class="col-3">
-            <h2>{{routine.username}}</h2>
+            <h2>{{routine.user.username}}</h2>
         </div>
         <div class="col-3">
             <ul>
-                <li>{{routine.exercise_name}}</li>
+                {{#each routine.exercise.exercise_name}}
+                <li>{{routine.exercise.exercise_name}}</li>
+                {{/each}}
             </ul>
         </div>
     </div>
