fixed routinecreate handlebars

--- a/views/routinecreate.handlebars
+++ b/views/routinecreate.handlebars
@@ -1,10 +1,15 @@
 <form class="routine-form">
     <div>
+        <h2>Routine Name:</h2>
         <textarea name="routine-name"></textarea>
-        <ul>
-            {{#each exercise.exercise_name}}
-            <li><input id="exercise-{{exercise.id}}" type="checkbox">{{exercise.exercise_name}}</li>
-        </ul>
-        <button class="submit">Submit</button>
     </div>
 </form>
+<div>
+    <h2>Choose what exercises to add:</h2>
+    <ul>
+        {{#each exercises as |exercise|}}
+        <li><input id="exercise-{{exercise.id}}" type="checkbox"> {{exercise.exercise_name}}</li>
+        {{/each}}
+    </ul>
+    <button class="submit">Submit</button>
+</div>
