completed remaining handlebars and styling

--- a/views/routines.handlebars
+++ b/views/routines.handlebars
@@ -1,7 +1,9 @@
 <div class="container">
-    <ul>
-        {{#each routines as |routine|}}
-        <li><a href="/routine/{{routine.id}}">{{routine.routine_name}}</a> by: {{routine.user.username}}</li>
-        {{/each}}
-    </ul>
+    <div class="col align-items-center">
+        <ul>
+            {{#each routines as |routine|}}
+            <li><a href="/routine/{{routine.id}}">{{routine.routine_name}}</a> by: {{routine.user.username}}</li>
+            {{/each}}
+        </ul>
+    </div>
 </div>
