--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,15 +4,29 @@ body, html {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
-    color: #333;
+    color: rgb(209, 14, 14);
+    background-color: black;
   }
 
+
+  .btn {
+    background-color: #225ca3;
+    border: 0;
+    padding: 1%;
+    color: black;
+    background-color: rgb(209, 14, 14);
+    font-weight: bold;
+    transition: background-color .1s;
+    cursor: pointer;
+    border-radius: 5px;
+  }
 
   button {
     background-color: #225ca3;
     border: 0;
     padding: 1%;
-    color: white;
+    color: black;
+    background-color: rgb(209, 14, 14);
     font-weight: bold;
     transition: background-color .1s;
     cursor: pointer;
@@ -21,7 +35,7 @@ body, html {
 
 
   header {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid rgb(209, 14, 14);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,7 +44,7 @@ body, html {
 
 
 footer {
-    border-top: 1px solid #ccc;
+    border-top: 1px solid rgb(209, 14, 14);
     display: flex;
     justify-content: center;
     padding: 1%;
@@ -40,4 +54,13 @@ footer {
 img {
   height: 200px;
   width: 300px;
+}
+
+.card {
+  border: 1px solid rgb(209, 14, 14);
+  background-color: black;
+}
+
+li a {
+  color: maroon;
 }
