--- a/views/routinecreate.handlebars
+++ b/views/routinecreate.handlebars
@@ -1,15 +1,21 @@
-<form class="routine-form">
-    <div>
-        <h2>Routine Name:</h2>
-        <textarea name="routine-name"></textarea>
+<form class="routine-form container">
+    <div class="row">
+        <div class="col-3">
+            <h2>Routine Name:</h2>
+            <textarea name="routine-name"></textarea>
+        </div>
+
+        <div class="col-3">
+        <h2>Choose what exercises to add:</h2>
+        <ul class="exercises">
+            {{#each exercises as |exercise|}}
+            <li><input data-exercise="{{exercise.id}}" name="{{exercise.id}}" type="checkbox"> {{exercise.exercise_name}}</li>
+            {{/each}}
+        </ul>        
+        </div>
+        <div class="col-3">
+            <button class="submit">Submit</button>
+        </div>
     </div>
 </form>
-<div>
-    <h2>Choose what exercises to add:</h2>
-    <ul>
-        {{#each exercises as |exercise|}}
-        <li><input id="exercise-{{exercise.id}}" type="checkbox"> {{exercise.exercise_name}}</li>
-        {{/each}}
-    </ul>
-    <button class="submit">Submit</button>
-</div>
+<script src="/js/routine-create.js"></script>
